hphp/hack/test/typecheck/array/disallow_incompatible_type_parameter_for_varray.php.exp
File "disallow_incompatible_type_parameter_for_varray.php", line 4, characters 10-21:
Invalid return type (Typing[4110])
  File "disallow_incompatible_type_parameter_for_varray.php", line 3, characters 25-27:
  Expected `int`
  File "disallow_incompatible_type_parameter_for_varray.php", line 4, characters 17-20:
  But got `bool`
